--- a/templates/base.html
+++ b/templates/base.html
@@ -36,8 +36,8 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
-                            <i class="bi bi-bar-chart"></i> 统计分析
+                        <a class="nav-link" href="{{ url_for('strategy_scores') }}">
+                            <i class="bi bi-award"></i> 策略评分
                         </a>
                     </li>
                 </ul>
